Add wolf variant sounds handling